make edit state visible on mobile again fix #376
plus some little css and theme update

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -91,7 +91,7 @@ summary {
     white-space: nowrap;
 }
 
-summary:hover, input[type="submit"], button {
+summary:hover, input[type="submit"], input[type="file"], button {
     cursor: pointer;
 }
 
